# Antigravity-Architect

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AUDIT.md  BRANCH_PROTECTION.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  antigravity_master_setup.py  pyproject.toml  task.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
antigravity-project/: .gitignore  CHANGELOG.md  LICENSE  README.md
antigravity-project/.github/: copilot-instructions.md
antigravity-project/scripts/: sentinel.py
scripts/: sentinel.py
src/antigravity_architect/: __init__.py  cli.py
src/antigravity_architect/core/: __init__.py  assimilator.py  builder.py  engine.py  governance.py
src/antigravity_architect/plugins/: __init__.py  ag_plugin_gitea.py  ag_plugin_github.py  ag_plugin_idx.py  ag_plugin_vscode.py  manager.py
src/antigravity_architect/resources/: __init__.py  constants.py  templates.py
src/antigravity_architect/resources/templates/blueprints/: audio.json  c-minimal.json  csharp-dotnet.json  elixir-phoenix.json  fastapi.json  flutter.json  go-fiber.json  java-spring.json  medical.json  nextjs.json  performance.json  rust-axum.json  rust-complex.json  zig.json
src/antigravity_architect/resources/templates/common/: gitignore  gitignore_map.json  licenses.json  links.md  readme.md
src/antigravity_architect/resources/templates/docs/: api.md  architecture.md
src/antigravity_architect/resources/templates/ide/: fleet_run.json  jetbrains_modules.xml  neovim.lua  zed_tasks.json
src/antigravity_architect/resources/templates/pipelines/: azure-pipelines.yml  docker-compose.yml  gitlab-ci.yml
src/antigravity_architect/resources/templates/rules/: 01_tech_stack.md
src/antigravity_architect/resources/templates/skills/bridge/: SKILL.md
src/antigravity_architect/resources/templates/skills/env_context/: env_context.py
src/antigravity_architect/resources/templates/skills/git_automation/: SKILL.md
src/antigravity_architect/resources/templates/skills/secrets_manager/: SKILL.md
tests/: .gitignore  test_antigravity.py  test_blueprints.py  test_cli_core.py  test_cli_doctor.py  test_cli_presets.py  test_extended.py  test_features.py  test_plugins.py  test_v162_features.py
