[project]
name = "antigravity-architect"
version = "1.4.0"
description = "Agent-First bootstrapping tool for AI-assisted development"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "pkeffect"}
]
requires-python = ">=3.10"
keywords = ["ai", "agent", "scaffolding", "bootstrapping", "gemini", "antigravity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
]

[project.scripts]
antigravity-architect = "antigravity_master_setup:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "black>=24.0",
    "bump2version>=1.0.1",
]

[tool.black]
line-length = 120
target-version = ['py310']

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# ============================================================================
# Bump2Version Configuration
# ============================================================================
# Usage:
#   bump2version patch  # 1.4.0 -> 1.4.1
#   bump2version minor  # 1.4.0 -> 1.5.0
#   bump2version major  # 1.4.0 -> 2.0.0
# ============================================================================
[tool.bumpversion]
current_version = "1.4.0"
commit = true
tag = true
tag_name = "v{new_version}"
message = "chore: bump version {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "antigravity_master_setup.py"
search = 'VERSION = "{current_version}"'
replace = 'VERSION = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = 'version-{current_version}-brightgreen'
replace = 'version-{new_version}-brightgreen'
